# web

./: .gitignore  .gitleaksignore  ActividadOpcional.txt  CLAUDE.md  Capaaplicacion.txt  Capadered.txt  IMPLEMENTATION_SUMMARY.md  INTEGRACION.md  Makefile  PLAN_DOCUMENTACION_COMPLETO.md  PREGUNTAS_RECURSOS_EXTERNOS.txt  PROJECT_CONTEXT.md  README.md  analyze_page.py  arquitectura.md  croody.pem  deploy.sh  deploy_from_scratch.sh  enrutamiento.txt  entrega.md  entrega.txt  funcionalidades.md  indicativos.txt  informe_entrega2_telemetria.md  informe_tecnico_entrega3.md  keyd-claude.conf  manual_tecnico.md  mejoras_propuestas.md  plan_practico_endurecimiento.md  teoria_aplicada.md  uso_y_mantenimiento.md
proyecto_integrado/Croody/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ADMIN_README.md  ANALISIS_CROODY_REPORT.md  ARREGLOS_FINALES.md  Buddy.txt  CHANGELOG_TRADUCCIONES.md  DEPLOY.md  Dockerfile  FINAL_TRANSLATION_FIX.md  I18N_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTRUCCIONES.md  Landing.txt  Makefile  QUICK_START_TRANSLATION.md  README.md  SOLUCION_TRADUCCIONES_REPORT.md  SOLUCION_TRADUCTOR.md  SUCCESS_REPORT.md  TEST_TRANSLATION_SYSTEM.md  TRANSLATION_FIX_SUMMARY.md  TRANSLATION_GUIDE.md  TRANSLATION_WORKFLOW.md  VERIFICATION_TEST_PLAN.md  admin_utilities.py  compile_translations.py  compile_translations_old.py  create_admin.py  create_products.py  create_superuser.py  deploy-aws.sh  docker-compose.yml  docker-entrypoint.prod.sh  docker-entrypoint.sh  ecs-task-definition.json  entrypoint.prod.sh  (+8 more)
proyecto_integrado/Croody/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
proyecto_integrado/Croody/croody/: asgi.py  navigation.py  settings.py  urls.py  wsgi.py
proyecto_integrado/Croody/docs/: CROODY_UI_BIBLIA_PLAN.txt  security_plan.md  style-guide.md  (+1 more)
(+343 files in other folders)
