[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "croody"
version = "1.0.0"
description = "Croody - Plataforma de fitness AI con Buddy y recompensas Luks"
authors = [
    {name = "Croody Team", email = "dev@croody.app"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://croody.app"
Repository = "https://github.com/croody/croody"
Documentation = "https://docs.croody.app"

# ========================================
# BLACK CONFIGURATION
# ========================================

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# ========================================
# ISORT CONFIGURATION
# ========================================

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Orden de imports
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

# Excluir archivos
skip_glob = [
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
    "*/node_modules/*",
    "*/build/*",
    "*/dist/*"
]

# ========================================
# DJANGO CONFIGURATION
# ========================================

[tool.django]
version = "5.0"
